Renamed All the Classes Properly

--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -13,10 +13,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Report Overview View Controller-->
+        <!--Posted Report Overview View Controller-->
         <scene sceneID="Z8y-Gg-72B">
             <objects>
-                <viewController storyboardIdentifier="PSReportOverviewViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vwB-jJ-aJr" customClass="PSReportOverviewViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSPostedReportOverviewViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vwB-jJ-aJr" customClass="PSPostedReportOverviewViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bC1-0K-68g">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -271,10 +271,10 @@
             </objects>
             <point key="canvasLocation" x="93553" y="-481"/>
         </scene>
-        <!--Report Detail View Controller-->
+        <!--Posted Report Detail View Controller-->
         <scene sceneID="MQy-nA-CBy">
             <objects>
-                <viewController storyboardIdentifier="PSReportDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Uok-6w-OL7" customClass="PSReportDetailViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSPostedReportDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Uok-6w-OL7" customClass="PSPostedReportDetailViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qQC-iA-gOb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -379,10 +379,10 @@
             </objects>
             <point key="canvasLocation" x="94305" y="-481"/>
         </scene>
-        <!--Report Action Popup View Controller-->
+        <!--Report Actions View Controller-->
         <scene sceneID="CBk-eg-ElG">
             <objects>
-                <viewController storyboardIdentifier="PSReportActionPopupViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="C9P-rf-lBW" customClass="PSReportActionPopupViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSReportActionsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="C9P-rf-lBW" customClass="PSReportActionsViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xsM-mf-XT2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -695,12 +695,12 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="94304.800000000003" y="1148.2758620689656"/>
+            <point key="canvasLocation" x="95111" y="350"/>
         </scene>
-        <!--Select Dialog View Controller-->
+        <!--Share Report View Controller-->
         <scene sceneID="rE1-zt-GIT">
             <objects>
-                <viewController storyboardIdentifier="PSSelectDialogViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1yh-r8-bYC" customClass="PSSelectDialogViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSShareReportViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1yh-r8-bYC" customClass="PSShareReportViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ben-d6-jlI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -765,7 +765,7 @@
                                 <rect key="frame" x="19" y="179" width="337.5" height="488"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelectDialogCell" rowHeight="60" id="bEY-ug-eJK" customClass="PSSelectDialogTableViewCell" customModule="PostSafety" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PSShareReportTableViewCell" rowHeight="60" id="bEY-ug-eJK" customClass="PSShareReportTableViewCell" customModule="PostSafety" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="337.5" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bEY-ug-eJK" id="HFH-Ad-n01">
@@ -773,7 +773,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j36-lp-N8d">
-                                                    <rect key="frame" x="4" y="4" width="335" height="52"/>
+                                                    <rect key="frame" x="4" y="4" width="329.5" height="52"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                                             <integer key="value" value="1"/>
@@ -787,13 +787,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcK-Bt-x6o">
-                                                    <rect key="frame" x="245" y="18.5" width="53" height="23"/>
+                                                    <rect key="frame" x="239.5" y="18.5" width="53" height="23"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlQ-Eh-6NG">
-                                                    <rect key="frame" x="303" y="14.5" width="30" height="30"/>
+                                                    <rect key="frame" x="297.5" y="14.5" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="jlQ-Eh-6NG" secondAttribute="height" id="2ch-kZ-UQ2"/>
                                                         <constraint firstAttribute="height" constant="30" id="awJ-um-Afj"/>
@@ -893,7 +893,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="95017.5" y="348.5"/>
+            <point key="canvasLocation" x="95862" y="350"/>
         </scene>
         <!--Close Report View Controller-->
         <scene sceneID="cYZ-bA-bxS">
@@ -994,12 +994,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ehw-I5-6kI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="95017" y="1148"/>
+            <point key="canvasLocation" x="96766" y="350"/>
         </scene>
-        <!--Category Select View Controller-->
+        <!--Summary Stats Report Type View Controller-->
         <scene sceneID="VJn-zd-VnJ">
             <objects>
-                <viewController storyboardIdentifier="PSCategorySelectViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4xB-8L-oR0" customClass="PSCategorySelectViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSSummaryStatsReportTypeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4xB-8L-oR0" customClass="PSSummaryStatsReportTypeViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LIW-JD-1Sj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1300,10 +1300,10 @@
             </objects>
             <point key="canvasLocation" x="95862" y="1148"/>
         </scene>
-        <!--Summary Stats Home View Controller-->
+        <!--Summary Stats View Controller-->
         <scene sceneID="I28-cI-hd3">
             <objects>
-                <viewController storyboardIdentifier="PSSummaryStatsHomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Tuo-UE-fAv" customClass="PSSummaryStatsHomeViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSSummaryStatsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Tuo-UE-fAv" customClass="PSSummaryStatsViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="J3Q-B3-snu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1670,12 +1670,12 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="95862" y="348"/>
+            <point key="canvasLocation" x="95038" y="1148"/>
         </scene>
-        <!--Summary Feed View Controller-->
+        <!--Summary Stats Feed View Controller-->
         <scene sceneID="JGB-oU-7nk">
             <objects>
-                <viewController storyboardIdentifier="PSSummaryFeedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="O77-UU-pq1" customClass="PSSummaryFeedViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSSummaryStatsFeedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="O77-UU-pq1" customClass="PSSummaryStatsFeedViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hQ6-CC-bmz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1843,10 +1843,10 @@
             </objects>
             <point key="canvasLocation" x="93553" y="349"/>
         </scene>
-        <!--Sort Reports Dialog View Controller-->
+        <!--Filter Reports View Controller-->
         <scene sceneID="drL-QN-x2Y">
             <objects>
-                <viewController storyboardIdentifier="PSSortReportsDialogViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="FEB-1j-IDs" customClass="PSSortReportsDialogViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSFilterReportsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="FEB-1j-IDs" customClass="PSFilterReportsViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SnC-N0-Bvf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2311,7 +2311,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="96765.600000000006" y="349.47526236881561"/>
+            <point key="canvasLocation" x="94305" y="1147"/>
         </scene>
     </scenes>
     <resources>
