--- a/PostSafety/PostSafety/Storyboards/User.storyboard
+++ b/PostSafety/PostSafety/Storyboards/User.storyboard
@@ -12,10 +12,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Receive Home View Controller-->
+        <!--Get Info View Controller-->
         <scene sceneID="LxT-JR-OHd">
             <objects>
-                <viewController storyboardIdentifier="PSReceiveHomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8ce-A6-TRK" customClass="PSReceiveHomeViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSGetInfoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8ce-A6-TRK" customClass="PSGetInfoViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q4u-3y-im1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,7 +47,7 @@
                                                                 </connections>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alerts/Announcements" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1Y-63-AoS">
-                                                                <rect key="frame" x="31" y="42.5" width="314.5" height="36"/>
+                                                                <rect key="frame" x="31" y="43" width="314.5" height="36"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                                                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -82,7 +82,7 @@
                                                                 </connections>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Posts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0J-80-8ll">
-                                                                <rect key="frame" x="113.5" y="43" width="149.5" height="36"/>
+                                                                <rect key="frame" x="113.5" y="42.5" width="149.5" height="36"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                                                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -318,20 +318,20 @@
             </objects>
             <point key="canvasLocation" x="1786" y="958"/>
         </scene>
-        <!--PSSummaryStatsHomeViewController-->
+        <!--PSSummaryStatsViewController-->
         <scene sceneID="4f8-QB-MVJ">
             <objects>
-                <viewControllerPlaceholder storyboardName="Admin" referencedIdentifier="PSSummaryStatsHomeViewController" id="3pj-yr-TJD" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Admin" referencedIdentifier="PSSummaryStatsViewController" id="3pj-yr-TJD" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="h4z-l1-v5J"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jvs-9K-8CN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2558" y="626"/>
         </scene>
-        <!--Receive Alerts View Controller-->
+        <!--Alerts Announcements View Controller-->
         <scene sceneID="TcF-tj-mSx">
             <objects>
-                <viewController storyboardIdentifier="PSReceiveAlertsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="g5u-W6-rSJ" customClass="PSReceiveAlertsViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSAlertsAnnouncementsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="g5u-W6-rSJ" customClass="PSAlertsAnnouncementsViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ere-cr-jBc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -547,10 +547,10 @@
             </objects>
             <point key="canvasLocation" x="1786" y="1882"/>
         </scene>
-        <!--Feed View Controller-->
+        <!--User Feed View Controller-->
         <scene sceneID="Sfc-c1-cJL">
             <objects>
-                <viewController storyboardIdentifier="PSFeedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jZa-NO-yVz" customClass="PSFeedViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSUserFeedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jZa-NO-yVz" customClass="PSUserFeedViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0ES-Ce-bGV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -624,7 +624,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="187.5" height="44"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New &amp; Unopened" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Foa-aT-gdh">
-                                                                <rect key="frame" x="25.5" y="12" width="137" height="20.5"/>
+                                                                <rect key="frame" x="26" y="12" width="137" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -644,7 +644,7 @@
                                                         <rect key="frame" x="187.5" y="0.0" width="187.5" height="44"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Archived" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8H-Ip-Pte">
-                                                                <rect key="frame" x="59" y="12" width="69.5" height="20.5"/>
+                                                                <rect key="frame" x="59.5" y="12" width="69.5" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -756,7 +756,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Updates and Announcements" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmw-8F-EmD">
-                                <rect key="frame" x="23" y="88" width="330" height="30"/>
+                                <rect key="frame" x="22.5" y="88" width="330" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -765,7 +765,7 @@
                                 <rect key="frame" x="0.0" y="246" width="375" height="421"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AnnouncementCell" rowHeight="142" id="tLr-CQ-ICL" customClass="PSFeedTableViewCell" customModule="PostSafety" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AnnouncementCell" rowHeight="142" id="tLr-CQ-ICL" customClass="PSFeedTableViewCell" customModule="PostSafety" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="142"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tLr-CQ-ICL" id="eKJ-CT-Ije">
@@ -933,16 +933,16 @@
             </objects>
             <point key="canvasLocation" x="2467.5" y="1881.5"/>
         </scene>
-        <!--Feed Detail View Controller-->
+        <!--User Feed Detail View Controller-->
         <scene sceneID="U9f-5D-eBj">
             <objects>
-                <viewController storyboardIdentifier="PSFeedDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="o0c-DC-IER" customClass="PSFeedDetailViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSUserFeedDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="o0c-DC-IER" customClass="PSUserFeedDetailViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="A0g-id-Kqx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Policy/Training/Annc Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lvS-19-pMc">
-                                <rect key="frame" x="47" y="88" width="282" height="30"/>
+                                <rect key="frame" x="46.5" y="88" width="282" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1058,16 +1058,16 @@
             </objects>
             <point key="canvasLocation" x="3238" y="1881"/>
         </scene>
-        <!--Attachment View Controller-->
+        <!--Feed Attachment View Controller-->
         <scene sceneID="YKR-qs-MAX">
             <objects>
-                <viewController storyboardIdentifier="PSAttachmentViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bX5-hP-raA" customClass="PSAttachmentViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSFeedAttachmentViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bX5-hP-raA" customClass="PSFeedAttachmentViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dTQ-Gi-zXZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="center" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ahZ-t1-uqX">
-                                <rect key="frame" x="0.0" y="111.5" width="375" height="444.5"/>
+                                <rect key="frame" x="0.0" y="111" width="375" height="445"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </webView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CdB-Kx-3R6">
@@ -1097,10 +1097,10 @@
             </objects>
             <point key="canvasLocation" x="4071" y="1881"/>
         </scene>
-        <!--Report Post View Controller-->
+        <!--Posted Report View Controller-->
         <scene sceneID="G7D-LT-KHe">
             <objects>
-                <viewController storyboardIdentifier="PSReportPostViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KTp-hF-yJE" customClass="PSReportPostViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSPostedReportViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KTp-hF-yJE" customClass="PSPostedReportViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jjx-7u-ijq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1110,7 +1110,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcP-HJ-bca">
-                                <rect key="frame" x="164" y="88" width="48" height="30"/>
+                                <rect key="frame" x="163.5" y="88" width="48" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
